# QuantityMeasurementCpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sh.sh
main/: feet.cpp  feet.h  inch.cpp  inch.h  length.cpp  length.h  quantity.cpp  quantity.h  unit.cpp  unit.h  volume.cpp  volume.h  weight.cpp  weight.h
test/: feetTest.cpp
